modules/2.ecs/ecs.tf
resource "aws_ecs_cluster" "ecs_fargate_cluster" {
  name = "${var.env}_ecs_fargate_cluster"
}

resource "aws_security_group" "ecs_tasks" {
  name   = "${var.env}-sg"
  vpc_id = var.vpc_id

  ingress {
    protocol         = "tcp"
    from_port        = var.container_port
    to_port          = var.container_port
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    protocol         = "-1"
    from_port        = 0
    to_port          = 0
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
}
